# Diplom-XAI-Project

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  requirements-train.txt  requirements.txt
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_report_versions_and_explanation_exports.py  0003_document_file_type_255.py  0004_postgres_retrieval_indexes.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/embeddings/: base.py  local.py
backend/app/integrations/: __init__.py  catalog.py  ocr.py  ollama.py
backend/app/llm/: base.py  local.py
backend/app/models/: __init__.py  base.py  domain.py  enums.py
backend/app/processors/: documents.py
backend/app/schemas/: __init__.py  audit.py  auth.py  common.py  document.py  notification.py  organization.py  report.py  requirement.py  risk.py
backend/app/services/: analysis.py  (+17 more)
backend/scripts/: benchmark_live_api.py  generate_experimental_report.py  generate_ocr_benchmark_report.py  generate_quality_benchmark_report.py  generate_quality_benchmark_suite_report.py
backend/tests/: conftest.py  test_acceptance_demo_flow.py  test_ai_runtime.py  test_analysis_quality.py  test_auth.py  test_celery_registration.py  test_document_extractors.py  test_experiment_metrics.py  test_ocr_benchmark.py  test_performance_metrics.py  test_pipeline.py  test_quality_benchmark.py  test_retrieval.py  test_system_routes.py  test_xai_artifacts.py
(+112 files in other folders)
